# rule72

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  PRD.md  README.md  default.nix  shell.nix
.github/workflows/: ci.yml
commit-reflow/: Cargo.toml  Justfile  shell.nix
commit-reflow/src/: lib.rs  main.rs
data.out/PowerChronicle/: commit_msg.0bb7dbd800460e0c9603b9af722f19f8cf1fc5e2.txt  commit_msg.16a923b671b12e20807de7bb4498f3ad696b4a8b.txt  commit_msg.1a7ceeddfabba6491613feb68926d91f66846021.txt  commit_msg.3c4ff46551e56443bcd435ff0b42bdc9319272de.txt  commit_msg.3dc24fd64217eab0587c0d0b27a1f638cefc4241.txt  commit_msg.3dc24fd64217eab0587c0d0b27a1f638cefc4241.txt.tmp  commit_msg.3e2d7a382b7dad80d64caebec27806554450794c.txt  commit_msg.426a981d985f356fa981b0dabda0147697ccd896.txt  commit_msg.434da289b8d6a4647e4a11e96506c98a888eea57.txt  commit_msg.489b656f1743ecfc4f414ff2173e3e6588634f22.txt  commit_msg.5182a37c14bc5716074ecdedb9e322dca9ae10d6.txt  commit_msg.5ba51cddd39226b18c67aae55ddb0bcced480e31.txt  commit_msg.61596b8415de403d31c4c6ab9aadae32c2474b98.txt  commit_msg.65d76ae5683348af98f6f57bb88309ee1842f7fa.txt  commit_msg.6631cc28eedfee9d75458bfdd018cb6035557481.txt  commit_msg.6a02dc9cfdfc6eb4511094760a5844a6daf77173.txt  commit_msg.6b9e5876711d52860f6bc9a56116aed5c32a12ab.txt  commit_msg.6e0a4f291c7d0cf468ca0ebd3791deee7461438e.txt  (+25 more)
rule72/: Cargo.toml
rule72/src/: classifier.rs  debug.rs  lexer.rs  lib.rs  main.rs  pretty_printer.rs  tree_builder.rs  types.rs  utils.rs
rule72/tests/: cli.rs
scripts/: check_version.py
(+101 files in other folders)
