[package]
name = "rule72"
version = "0.2.2"
edition = "2021"
authors = ["Mark Ruvald Pedersen"]
license = "MIT OR Apache-2.0"
description = "Git commit-message reflow CLI tool"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1"
unicode-segmentation = "1.10"
unicode-width = "0.1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"